add size variable

--- a/client/src/styles/Hoods/_Var.scss
+++ b/client/src/styles/Hoods/_Var.scss
@@ -11,6 +11,16 @@ $colors: (
   ),
 );
 
+//size variable:
+$breakpoints: (
+  "xs": 0,
+  "sm": 480,
+  "md": 720,
+  "lg": 960,
+  "xl": 1200,
+  "xxl": 1400,
+);
+
 :root {
   //theme:
   $theme: light;
