--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -1,3 +1,5 @@
 @import "~vazirmatn/Vazirmatn-font-face.css";
 @import "./Hoods/Var";
-@import "./Sections/Base"
+@import "./Hoods/Mixins";
+@import "./Hoods/Fibonacci";
+@import "./Sections/Base";
