--- a/client/src/styles/Hoods/_Var.scss
+++ b/client/src/styles/Hoods/_Var.scss
@@ -1,8 +1,8 @@
 $colors: (
   light: (
-    "fg": #e5989b,
-    "text": #6d6875,
-    "bg": #ffcdb2,
+    "fg": #f4f1de,
+    "text": #3d405b,
+    "bg": #f2cc8f,
   ),
   dark: (
     "bg": #264653,
@@ -10,6 +10,8 @@ $colors: (
     "text": #e9c46a,
   ),
 );
+
+$MainColorSassVar: map-get($colors, "light");
 
 //size variable:
 $breakpoints: (
@@ -24,12 +26,17 @@ $breakpoints: (
 :root {
   //theme:
   $theme: light;
-  @media (prefers-color-scheme: dark) {
-    $theme: dark;
-  }
+
+//   @media (prefers-color-scheme: dark) {
+//     $theme: dark;
+//     $MainColorSassVar: map-get($colors, "dark");
+//   }
 
   //make color vars:
   @each $name, $code in map-get($colors, $theme) {
     --color-#{$name}: #{$code};
   }
+
+  //animation:
+  --animation: cubic-bezier(0.85, 0.66, 0.21, 0.46);
 }
