slice Header style + code more readable

--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -3,4 +3,4 @@
 @import "./Hoods/Mixins";
 @import "./Hoods/Fibonacci";
 @import "./Sections/Base";
-@import "./Sections/Header";
+@import "./Sections/Header/Main";
