--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -4,4 +4,5 @@
 @import "./Hoods/Fibonacci";
 @import "./Sections/Base";
 @import "./Sections/Header/Main";
-@import "./Sections/Footer"
+@import "./Sections/Footer";
+@import "./Sections/Content/Main.scss";
