--- a/client/src/styles/Sections/Content/_ContentBase.scss
+++ b/client/src/styles/Sections/Content/_ContentBase.scss
@@ -23,6 +23,6 @@ main {
 
   padding: 0 1rem {
     top: calc(var(--first-fibo) / 2 + 1rem);
-    bottom: calc(var(--first-fibo) / 2);
+    bottom: calc(var(--first-fibo) + 1rem);
   }
 }
