--- a/client/src/styles/Hoods/_Var.scss
+++ b/client/src/styles/Hoods/_Var.scss
@@ -38,5 +38,5 @@ $breakpoints: (
   }
 
   //animation:
-  --animation: cubic-bezier(0.85, 0.66, 0.21, 0.46);
+  --animation: cubic-bezier(.19,.87,.66,.03);
 }
