--- a/client/src/styles/Sections/Content/_Table.scss
+++ b/client/src/styles/Sections/Content/_Table.scss
@@ -7,4 +7,19 @@
   }
   text-align: center;
   border-radius: 0.5rem;
+
+  section {
+    transition: 1s all var(--animation);
+  }
+
+  @include media("xs", 860) {
+    .Atom {
+      font-size: 0.8rem !important;
+    }
+
+    sub,
+    sup {
+      font-size: 0.5rem !important;
+    }
+  }
 }
