chnage grid-template

--- a/client/src/styles/Sections/Content/_Table.scss
+++ b/client/src/styles/Sections/Content/_Table.scss
@@ -46,4 +46,12 @@
       }
     }
   }
+
+  @include media("xs", "md") {
+    grid-template: {
+      rows: repeat(162, auto);
+      columns: auto;
+    }
+    margin-bottom: calc(var(--first-fibo) * 4);
+  }
 }
