--- a/client/src/styles/Sections/Header/_Header.scss
+++ b/client/src/styles/Sections/Header/_Header.scss
@@ -1,70 +1,69 @@
 .header {
-    width: 90vw;
-    min-height: calc(var(--first-fibo) + 2vh);
-    padding: 0 1vh;
-    position: fixed;
-    top: 2vh;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: var(--color-fg);
-    border-radius: 5rem;
-    box-shadow: 0px 5px 15px rgba(map-get($MainColorSassVar, "bg"), 0.8);
-    z-index: 9;
-    overflow: hidden;
-  
-    @include flex(flex-start);
-    @include media("xl") {
-      top: calc(1vh * var(--first-fibo));
-      transform: translate(-50%, -50%);
-    }
-  
-    &,
-    & > * {
-      transition: width 0.5s var(--animation), height 0.5s var(--animation);
-    }
-  
-    //header title
-    &__title {
-      margin-right: 2vh;
-      transition: font-size 0.5s var(--animation);
+  width: 90vw;
+  min-height: calc(var(--first-fibo) + 2vh);
+  padding: 0 1vh;
+  position: fixed;
+  top: 2vh;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--color-fg);
+  border-radius: 5rem;
+  box-shadow: 0px 5px 15px rgba(var(--color-bg-rgb), 0.8);
+  z-index: 9;
+  overflow: hidden;
 
-      //font sizes:  
-      @include media("xs", "sm") {
-        font-size: 1rem;
-      }
-  
-      @include media("sm", "md") {
-        font-size: 1.5rem;
-      }
-  
-      @include media("xl") {
-        font-size: calc(var(--first-fibo) / 3);
-      }
+  @include flex(flex-start);
+  @include media("xl") {
+    top: calc(1vh * var(--first-fibo));
+    transform: translate(-50%, -50%);
+  }
+
+  &,
+  & > * {
+    transition: width 0.5s var(--animation), height 0.5s var(--animation);
+  }
+
+  //header title
+  &__title {
+    margin-right: 2vh;
+    transition: font-size 0.5s var(--animation);
+
+    //font sizes:
+    @include media("xs", "sm") {
+      font-size: 1rem;
     }
-  
-    //top header colorful bar
-    &--top {
-      width: 100vw;
-      height: var(--first-fibo);
-      background-color: rgba(map-get($MainColorSassVar, "fg"), 0.5);
-      border: {
-        bottom-right-radius: 2rem;
-        bottom-left-radius: 2rem;
-      }
-      transition: opacity 0.5s var(--animation);
-  
-      display: block;
-      opacity: 0;
-  
-      @include media("xl") {
-        opacity: 1;
-      }
+
+    @include media("sm", "md") {
+      font-size: 1.5rem;
     }
-  
-    &__ {
-      &logo {
-        background-color: var(--color-bg);
-      }
+
+    @include media("xl") {
+      font-size: calc(var(--first-fibo) / 3);
     }
   }
-  
+
+  //top header colorful bar
+  &--top {
+    width: 100vw;
+    height: var(--first-fibo);
+    background-color: rgba(var(--color-fg-rgb), 0.5);
+    border: {
+      bottom-right-radius: 2rem;
+      bottom-left-radius: 2rem;
+    }
+    transition: opacity 0.5s var(--animation);
+
+    display: block;
+    opacity: 0;
+
+    @include media("xl") {
+      opacity: 1;
+    }
+  }
+
+  &__ {
+    &logo {
+      background-color: var(--color-bg);
+    }
+  }
+}
