--- a/client/src/styles/Hoods/_Var.scss
+++ b/client/src/styles/Hoods/_Var.scss
@@ -17,20 +17,20 @@ $colors: (
     ),
   ),
   dark: (
-    "bg": (
-      38,
-      70,
-      83,
-    ),
     "fg": (
-      42,
-      157,
-      143,
+      44,
+      54,
+      57,
+    ),
+    "bg": (
+      44,
+      51,
+      51,
     ),
     "text": (
-      233,
-      196,
-      106,
+      220,
+      215,
+      201,
     ),
   ),
 );
@@ -49,10 +49,9 @@ $breakpoints: (
   //theme:
   $theme: light;
 
-  //   @media (prefers-color-scheme: dark) {
-  //     $theme: dark;
-  //     $MainColorSassVar: map-get($colors, "dark");
-  //   }
+  @media (prefers-color-scheme: dark) {
+    $theme: dark;
+  }
 
   //make color vars:
   @each $name, $code in map-get($colors, $theme) {
