--- a/client/src/styles/Sections/Content/_Table.scss
+++ b/client/src/styles/Sections/Content/_Table.scss
@@ -6,7 +6,8 @@
     columns: repeat(19, auto);
   }
   text-align: center;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
+  padding: 0.5rem;
 
   section {
     transition: 1s all var(--animation);
@@ -70,5 +71,9 @@
     }
 
     margin-bottom: calc(var(--first-fibo) * 1);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    background-color: rgba(var(--color-text-rgb), 0.2);
   }
 }
