--- a/client/src/styles/Hoods/_Var.scss
+++ b/client/src/styles/Hoods/_Var.scss
@@ -17,21 +17,9 @@ $colors: (
     ),
   ),
   dark: (
-    "fg": (
-      44,
-      54,
-      57,
-    ),
-    "bg": (
-      44,
-      51,
-      51,
-    ),
-    "text": (
-      220,
-      215,
-      201,
-    ),
+    "fg": (68, 60, 104),
+    "bg": (57, 48, 83),
+    "text": (229, 229, 203),
   ),
 );
 
