--- a/client/src/styles/Sections/Header/_Menu.scss
+++ b/client/src/styles/Sections/Header/_Menu.scss
@@ -1,42 +1,60 @@
 .header {
   //menu
-  &__menu-item > {
-    button {
-      all: unset;
-      cursor: pointer;
-    }
+  &__menu-item {
+    > {
+      button {
+        all: unset;
+        cursor: pointer;
+      }
 
-    a,
-    button {
-      position: relative;
-      text-align: center;
+      a,
+      button {
+        position: relative;
+        text-align: center;
 
-      &:hover {
+        &:hover {
+          &::after {
+            opacity: 1;
+            transform: translateX(-50%) scaleX(1);
+          }
+        }
+
         &::after {
-          opacity: 1;
-          transform: translateX(-50%) scaleX(1);
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          transform: translateX(-50%) scaleX(0);
+          display: block;
+
+          width: 100%;
+          height: 3px;
+          border-radius: 1rem;
+          background-color: var(--color-text);
+          opacity: 0;
+
+          transition: all 0.5s ease;
+        }
+
+        & > svg {
+          margin-left: 0.5rem;
+        }
+
+        @include media(1700) {
+          font-size: 2rem;
         }
       }
+    }
 
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%) scaleX(0);
-        display: block;
-
-        width: 100%;
-        height: 3px;
-        border-radius: 1rem;
-        background-color: var(--color-text);
-        opacity: 0;
-
-        transition: all 0.5s ease;
+    @include media("xl") {
+      &.icons * {
+        font-size: 1.5rem !important;
       }
+    }
 
-      & > svg {
-        margin-left: 0.5rem;
+    @include media(2000) {
+      &.icons * {
+        font-size: 2rem !important;
       }
     }
   }
