import Error component

--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -6,3 +6,4 @@
 @import "./Sections/Header/Main";
 @import "./Sections/Footer";
 @import "./Sections/Content/Main.scss";
+@import "./Sections/Error"
