--- a/client/src/styles/Sections/_Footer.scss
+++ b/client/src/styles/Sections/_Footer.scss
@@ -7,7 +7,7 @@
     top-left-radius: 2rem;
   }
   box-shadow: 0px -5px 15px rgba(var(--color-bg-rgb), 0.8);
-  direction: ltr;
+  direction: ltr !important;
   word-spacing: 0.1rem;
   overflow: visible;
   padding: 0.1rem 0;
