--- a/client/src/styles/Sections/_Footer.scss
+++ b/client/src/styles/Sections/_Footer.scss
@@ -18,6 +18,15 @@
 
   @include flex();
 
+  @include media("xxl") {
+    font-size: 1.5rem;
+  }
+
+  @include media(2000) {
+    font-size: 2rem;
+  }
+
+
   & > * {
     margin: 0 0.2rem;
   }
