make title a Link

--- a/client/src/styles/Sections/Header/_Header.scss
+++ b/client/src/styles/Sections/Header/_Header.scss
@@ -28,6 +28,10 @@
     margin-right: 2vh;
     transition: font-size 0.5s var(--animation);
 
+    & > a {
+      text-decoration: none;
+    }
+
     //font sizes:
     @include media("xs", "sm") {
       font-size: 1rem;
