--- a/client/src/styles/Sections/Content/_Table.scss
+++ b/client/src/styles/Sections/Content/_Table.scss
@@ -21,7 +21,7 @@
 
   @include media("xs", 860) {
     .Atom {
-      font-size: 0.8rem !important;
+      font-size: 1.2rem !important;
     }
 
     .row,
@@ -31,7 +31,7 @@
 
     sub,
     sup {
-      font-size: 0.5rem !important;
+      font-size: 15px !important; //for lighthouse
     }
   }
 
