--- a/client/src/styles/Sections/Header/_Search.scss
+++ b/client/src/styles/Sections/Header/_Search.scss
@@ -78,7 +78,7 @@ $rad: 5rem;
 
     &submit {
       cursor: pointer;
-      border-radius: 100%;
+      border-radius: 1rem;
 
       html.rtl & {
         border-right: 2px solid var(--color-text);
