--- a/client/src/styles/Sections/Header/_Header.scss
+++ b/client/src/styles/Sections/Header/_Header.scss
@@ -25,8 +25,15 @@
 
   //header title
   &__title {
-    margin-right: 2vh;
     transition: font-size 0.5s var(--animation);
+
+    html.ltr & {
+      margin-left: 2vh;
+    }
+
+    html.rtl & {
+      margin-right: 2vh;
+    }
 
     & > a {
       text-decoration: none;
