effect for selected item

--- a/client/src/styles/Sections/Header/_Menu.scss
+++ b/client/src/styles/Sections/Header/_Menu.scss
@@ -12,11 +12,16 @@
         position: relative;
         text-align: center;
 
-        &:hover {
+        &:hover,
+        &.active {
           &::after {
             opacity: 1;
             transform: translateX(-50%) scaleX(1);
           }
+        }
+
+        &.active {
+          pointer-events: none;
         }
 
         &::after {
