--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import "~vazirmatn/Vazirmatn-font-face.css";
 @import "./Hoods/Var";
 @import "./Hoods/Mixins";
