--- a/client/src/styles/Sections/Content/_ContentBase.scss
+++ b/client/src/styles/Sections/Content/_ContentBase.scss
@@ -1,10 +1,10 @@
 main {
   width: calc(100vw - (var(--first-fibo) / 2));
-  min-height: calc(var(--first-fibo) * 6);
+  min-height: 85vh;
 
   // in phone:
   @include media("xs", "lg") {
-    min-height: calc(var(--first-fibo) * 11);
+    min-height: 100vh;
   }
 
   background-color: var(--color-fg);
