--- a/client/src/styles/Sections/Content/_Table.scss
+++ b/client/src/styles/Sections/Content/_Table.scss
@@ -96,16 +96,10 @@
   }
 }
 
-body.system .table {
-  @media (prefers-color-scheme: dark) {
-    background-color: rgba(var(--color-text-rgb), 0.2);
-  }
-
-  @media (prefers-color-scheme: light) {
-    background-color: transparent !important;
-  }
-}
-
 body.light .table {
   background-color: transparent !important;
+}
+
+body.dark .table {
+  background-color: rgba(var(--color-text-rgb), 0.2);
 }
