style in xs-719

--- a/client/src/styles/Sections/Content/_Table.scss
+++ b/client/src/styles/Sections/Content/_Table.scss
@@ -19,6 +19,10 @@
     margin-bottom: 0.5rem;
   }
 
+  @include media("xs", 719) {
+    overflow: visible !important;
+  }
+
   @include media("xs", "md") {
     .Atom {
       font-size: 1.2rem !important;
