--- a/client/src/styles/Sections/Content/_Info.scss
+++ b/client/src/styles/Sections/Content/_Info.scss
@@ -92,11 +92,15 @@
       width: var(--first-fibo);
       height: var(--first-fibo);
       position: absolute;
-      top: 2rem;
+      top: 0;
       margin: 1rem 1rem;
       z-index: 10;
       background-color: var(--color-bg);
       border-radius: 100%;
+
+      @include media("md") {
+        top: 1rem;
+      }
 
       html.rtl & {
         left: 0;
