fix translate onchage lang + responsive in 720

--- a/client/src/styles/Sections/Content/_Info.scss
+++ b/client/src/styles/Sections/Content/_Info.scss
@@ -129,7 +129,7 @@
     }
   }
 
-  @include media("xs", 660) {
+  @include media("xs", "md") {
     section {
       grid-template: {
         columns: auto;
